Update index and styles

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     
         <h2>Gallery</h2>
         <section>
-            <p>Here are some highlights of my work. The locations and year are in the caption. </p>
-            Chile.png
-            Chile, 2001
+            <p>Here are some highlights of my work. The locations and year are in the caption.</p>
+            <figure>
+                <img src="images/Chile.png" alt="Image of Chile the Country.">
+                <figcaption>Chile, 2001</figcaption>
+            </figure>
 
             Guatemala.png
             Guatemala, 1997
