--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <p>Here are some highlights of my work. The locations and year are in the caption.</p>
             <figure>
-                <img src="Jones_PhotoGallery/images/Chile.png" alt="Image of Chile the Country.">
+                <img src="/images/Chile.png" alt="Image of Chile the Country.">
                 <figcaption>Chile, 2001</figcaption>
             </figure>
 
