--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
                 <figcaption>Chile, 2001</figcaption>
             </figure>
 
-            Guatemala.png
-            Guatemala, 1997
+            <figure>
+                <img src="/images/Guatemala.png" alt="Image of Guatemala the Country.">
+                <figcaption>Guatemala, 1997</figcaption>
+            </figure>
+
+            
+            
 
             Hawaii.png
             Hawaii, 2010
