--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <section>
             <p>Here are some highlights of my work. The locations and year are in the caption.</p>
             <figure>
-                <img src="/images/Chile.png" alt="Image of Chile the Country.">
+                <img src="images/Chile.png" alt="Image of Chile the Country.">
                 <figcaption>Chile, 2001</figcaption>
             </figure>
 
             <figure>
-                <img src="/images/Guatemala.png" alt="Image of Guatemala the Country.">
+                <img src="images/Guatemala.png" alt="Image of Guatemala the Country.">
                 <figcaption>Guatemala, 1997</figcaption>
             </figure>
 
